Add text blocks.