@@ -23,9 +23,12 @@ public class IntegerFlagDeserializer extends StdDeserializer<Integer> {
             case VALUE_FALSE -> 0;
             case VALUE_TRUE -> 1;
             default -> {
-                ctxt.reportWrongTokenException(JsonToken.class, JsonToken.VALUE_NUMBER_INT,
-                        String.format("Failed to parse field %s to Integer type with a reason: Expected type boolean"
-                                + " or integer(`0` or `1`).", parser.getCurrentName()));
+                ctxt.reportWrongTokenException(
+                        JsonToken.class,
+                        JsonToken.VALUE_NUMBER_INT,
+                        """
+                                Failed to parse field %s to Integer type with a reason:
+                                Expected type boolean or integer(`0` or `1`).""".formatted(parser.getCurrentName()));
                 // the previous method should have thrown
                 throw new AssertionError();
             }
